Fix off-centered buttons; update status for hydrate status (#19698)

--- a/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
+++ b/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
@@ -55,7 +55,8 @@
         margin-left: auto;
         font-size: 14px;
         line-height: 20px;
-        padding: 0 5px;
+        display: flex;
+        padding: 1px 5px;
         cursor: pointer;
         color: $argo-color-gray-6;
         border: 1px solid $argo-color-gray-5;
@@ -141,6 +142,7 @@
         align-items: center;
         margin-bottom: 0.5em;
         font-weight: 500;
+        padding: 2px 0px;
         .fa {
             font-size: 1em;
         }
@@ -182,6 +184,7 @@
         }
 
         &__status-button {
+            display: inline;
             border-radius: 5px;
             padding: 2px;
             border: 1px solid $argo-color-gray-5;
