--- a/ui/src/app/applications/components/utils.scss
+++ b/ui/src/app/applications/components/utils.scss
@@ -34,7 +34,9 @@ i.utils-health-status-icon {
 }
 
 .status-button {
+    display: inline;
     border-radius: 5px;
+    vertical-align: middle;
     padding: 2px;
     border: 1px solid $argo-color-gray-5;
     &:hover {
